Fix i3 duplicate keybinding and add Neovim-Zsh-Testing-Claude integration
- Remove duplicate Mod+m keybinding (audio mute conflicted with monitor focus)
- Add session management with vim-obsession
- Add integrated terminals with toggleterm.nvim
- Add testing framework with neotest + neotest-python
- Add Claude Code integration with custom commands
- Enhance work() function with -e flag for auto-opening Neovim sessions
- Add data science tools (molten, jupytext, image.nvim, bioSyntax)
- Add interactive volume control to i3 status bar
- Remove battery and WiFi from status bar
- Add audio control keybindings and zsh aliases
- Fix all Neovim health check warnings
- Update documentation and command references

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Lavoro Work Directories - NEVER COMMIT THESE
+Documents/Lavoro/Linfoma/ANAMNESIS/
 Lavoro/
 **/Lavoro/
 Documents/Lavoro/
 ~/Documents/Lavoro/
+
+# Work projects config (may contain sensitive paths)
+.zsh/work_projects.conf
 
 # Python Virtual Environments
 venv/
