--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,6 +31,9 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # Reduce escape time (important for nvim)
 set -sg escape-time 10
 
+# Enable focus events (important for nvim autoread)
+set-option -g focus-events on
+
 # ==========================
 # Key Bindings
 # ==========================
