--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -154,6 +154,20 @@ bindsym $mod+Shift+v exec --no-startup-id ~/.config/i3/scripts/vpn-toggle.sh
 bindsym $mod+Ctrl+v exec --no-startup-id ~/.config/i3/scripts/vpn-menu.sh
 
 # ==============================
+# Audio Controls
+# ==============================
+
+# Volume control (using amixer)
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
+
+# Alternative volume controls (if XF86 keys don't work)
+bindsym $mod+plus exec --no-startup-id amixer set Master 5%+
+bindsym $mod+minus exec --no-startup-id amixer set Master 5%-
+# Note: $mod+m is used for monitor focus, so use media key or status bar for mute
+
+# ==============================
 # System Controls
 # ==============================
 
@@ -218,7 +232,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 # ==============================
 
 bar {
-    status_command ~/.config/i3/scripts/i3status-wrapper.sh
+    status_command ~/.config/i3/scripts/i3bar-wrapper.sh
     position top
     tray_output primary
 
