Add comprehensive Neovim navigation and AI tools (ThePrimeagen-style)
- Add Harpoon for quick file marks (<leader>a, <leader>h, <leader>1-4)
- Add Oil.nvim for filesystem editing like a buffer
- Add Codeium AI completion (free GitHub Copilot alternative)
- Add Telescope file browser extension (<leader>pe, <leader>pp)
- Add Ruff LSP for Python linting and formatting
- Enhance LSP with bashls and jsonls
- Update keymaps to avoid conflicts
- Comprehensive documentation in COMMANDS_NVIM.md

New Features:
- Harpoon: Mark frequently-edited files, switch instantly with <leader>1-4
- Oil.nvim: Edit filesystem like buffer (dd to delete, edit lines to rename)
- Codeium: Free AI code completion with chat interface
- Telescope file browser: Navigate files with Telescope UI
- Ruff + Pyright: Complete Python stack (types + linting)

Python Development Stack:
- Pyright: Type checking and code intelligence
- Ruff: Fast linter/formatter (replaces black, isort, flake8)
- Codeium: AI-powered code suggestions
- Neotest: Testing framework integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Lavoro Work Directories - NEVER COMMIT THESE
+Documents/Lavoro/NeuroSEED/
 Documents/Lavoro/Linfoma/ANAMNESIS/
 Lavoro/
 **/Lavoro/
