--- a/zsh/.zsh/work_projects.conf
+++ b/zsh/.zsh/work_projects.conf
@@ -10,3 +10,5 @@ prism:prism_sr_hdnabert:${LAVORO_DIR}/prism_sr_hdnabert
 cgkt:cgkt:${LAVORO_DIR}/cgkt
 ana:anamnesis:/home/gio/Documents/Lavoro/Linfoma/ANAMNESIS
 anamnesis:anamnesis:/home/gio/Documents/Lavoro/Linfoma/ANAMNESIS
+neuro:neuroseed:/home/gio/Documents/Lavoro/NeuroSEED
+neuroseed:neuroseed:/home/gio/Documents/Lavoro/NeuroSEED
