Add comprehensive printer management for i3 desktop
- Add PRINTER_MANAGEMENT.md complete guide (CUPS, GUI, CLI, troubleshooting)
- Add printer menu script with rofi integration
- Add i3 keybindings: Mod+p (menu), Mod+Shift+p (config), Mod+Ctrl+p (web)
- Add 13 zsh printer aliases (printers, pq, pcancel, ptest, etc.)
- Update install-packages.sh to include CUPS and printer drivers
- Fix keybinding conflict: move arandr to Mod+Shift+d (was Mod+p)
- Update COMMANDS_I3.md with complete printer management section

Features:
- Rofi menu with 8 printer management options
- GUI tool (system-config-printer) integration
- CUPS web interface quick access (localhost:631)
- Command-line printer management aliases
- Print queue management, job cancellation
- Test page printing, CUPS service restart
- Detailed documentation with examples

Printer Menu Options:
- Configure printers (GUI)
- CUPS web interface
- View print queue
- Cancel all jobs
- Print test page
- Restart CUPS service
- Printer status
- View CUPS logs

Zsh Aliases:
printers, pq, pqall, pcancel, pstatus, pconf, pcups, ptest,
plogs, prestart, pdefault, pdrivers, pdevices, print

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -128,7 +128,7 @@ bindsym $mod+m focus output left
 bindsym $mod+Shift+m focus output right
 
 # Launch arandr for monitor configuration
-bindsym $mod+p exec --no-startup-id arandr
+bindsym $mod+Shift+d exec --no-startup-id arandr
 
 # ==============================
 # Application Launchers
@@ -166,6 +166,19 @@ bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 bindsym $mod+plus exec --no-startup-id amixer set Master 5%+
 bindsym $mod+minus exec --no-startup-id amixer set Master 5%-
 # Note: $mod+m is used for monitor focus, so use media key or status bar for mute
+
+# ==============================
+# Printer Management
+# ==============================
+
+# Open printer management menu
+bindsym $mod+p exec --no-startup-id ~/.config/i3/scripts/printer-menu.sh
+
+# Quick access to printer configuration
+bindsym $mod+Shift+p exec --no-startup-id system-config-printer
+
+# Open CUPS web interface
+bindsym $mod+Ctrl+p exec --no-startup-id xdg-open http://localhost:631
 
 # ==============================
 # System Controls
